--- a/scss/_section.scss
+++ b/scss/_section.scss
@@ -1,17 +1,3 @@
-#scroll-down-button {
-	@include flexContainer($display: inline-flex);
-	z-index: $z-global-menu-overlay;
-	position: absolute;
-	bottom: 16px;
-	left: 50%;
-	transform: translateX(-50%);
-	cursor: pointer;
-
-	& > i {
-		font-size: 48px;
-	}
-}
-
 section {
 	z-index: $z-section-content;
 	display: flex;
